<resources>
    <string name="app_name">录像电话</string>
    <string name="signal_strength">信号强度</string>
    <string name="safety">安全性    :  </string>
    <string name="password">密码</string>
    <string name="connect">连接</string>
    <string name="disconnect">忘记</string>
    <string name="cancel">取消</string>
    <string name="conn_status">连接状态</string>
    <string name="ip_address">IP地址</string>
    <string name="connection_state">连接状态   :   </string>
    <string name="forget">忘记</string>
    <string name="dont_have_camera_error">camera not found!</string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>

    <string name="permission_storage">存储空间</string>
    <string name="permission_location">位置信息</string>
    <string name="permission_camera">拍照权限</string>
    <string name="permission_dialog_title">开启%s</string>
    <string name="permission_dialog_msg">为了您能正常使用%s，需要以下权限</string>
    <string name="permission_title">请允许获取%s</string>
    <string name="permission_denied">我们需要获取%1$s, 否则您将无法正常使用%2$s</string>
    <string name="permission_denied_with_naac">"由于%1$s无法获取%2$s, 不能正常运行, 请开启权限后再使用。\n\n设置路径: 应用管理->%3$s->权限"</string>
    <string name="permission_cancel">取消</string>
    <string name="permission_ensure">确定</string>
    <string name="permission_reject">拒绝</string>
    <string name="permission_btn_next">下一步</string>
    <string name="permission_go_to_setting">去设置</string>


    <string name="file_opener">File Opener</string>
    <string name="ok">确定</string>
    <string name="back">返回</string>
    <string name="no_network">无法访问网络</string>
    <string name="zxing_msg_default_status">将二维码放入框内扫描</string>
    <string name="setting_title">智能播控综合管理系统</string>
    <string name="setting_system_status">系统状态</string>
    <string name="setting_status">与服务器连接状态</string>
    <string name="setting_internal_storage">内部存储器状态</string>
    <string name="setting_internal_storage_value">(3/15)</string>
    <string name="setting_external_storage">外部存储器状态</string>
    <string name="screen_rotation">屏幕旋转</string>
    <string name="software_settings">软件设置</string>
    <string name="intent_settings">以太网设置</string>
    <string name="wifi_settings">wifi设置</string>
    <string name="navigation_bar_settings">导航栏设置</string>
    <string name="application_settings">应用设置</string>
    <string name="resource_management">资源管理</string>
    <string name="storage_settings">存储设置</string>
    <string name="data">日期和时间</string>
    <string name="setting">设置</string>
    <string name="system_message">系统信息</string>
    <string name="restart">重启</string>
    <string name="shut_down">关机</string>
    <string name="terminal_setting">终端设置</string>
    <string name="terminal_info">终端信息</string>
    <string name="intent_setting">网络设置</string>
    <string name="start_play">开始播放</string>
    <string name="exit">退出</string>
    <string name="device_id">设备编号</string>
    <string name="device_name">设备名称</string>
    <string name="language_settings">语言设置</string>
    <string name="time_setting">时间设置</string>
    <string name="version_information">版本信息</string>
    <string name="instructions">操作说明</string>
    <string name="storage">播放任务</string>
    <string name="date">日期</string>
    <string name="automatic_date_determination">自动更新日期(单机)</string>
    <string name="time">时间</string>
    <string name="timeZone">时区</string>
    <string name="poweronoff">定时</string>
    <string name="timeZone_beijin">东八区-北京</string>
    <string name="software_version">软件版本</string>
    <string name="version_date">版本日期</string>
    <string name="firmware_version">固件版本</string>
    <string name="update_title">检测升级</string>
    <string name="inside_storage">内置存储</string>
    <string name="inside_available">内置可用</string>
    <string name="externally_available">外置可用</string>
    <string name="external_storage">外置存储</string>
    <string name="ethernet">以太网</string>
    <string name="server">服务器</string>
    <string name="operating_mode">工作模式</string>
    <string name="network_mode">网络模式</string>
    <string name="mac_address">MAC地址</string>
    <string name="subnet_mask">子网掩码</string>
    <string name="gateway">网关</string>
    <string name="dns1">DNS1</string>
    <string name="dns2">DNS2</string>
    <string name="open">开启</string>
    <string name="server_address">服务器地址</string>
    <string name="connection_status">连接状态</string>
    <string name="control_port">控制端口</string>
    <string name="download_link">下载地址</string>
    <string name="save">保存</string>
    <string name="current_network_status">当前网络状态:</string>
    <string name="normal">正常</string>
    <string name="single_mode">单机模式</string>
    <string name="intent_mode">网络模式</string>
    <string name="select_time_zone">选择时区</string>
    <string name="dynamic_acquisition">动态获取</string>
    <string name="service_not_connected">当前服务器未连接，点我前去连接！！！</string>

    <string name="face_liveness_detection">活体检测</string>
    <string name="face_recognition">人脸识别</string>
    <string name="face_binoculor_liveness">双目活体</string>
    <string name="face_tracking">人脸追踪</string>
    <string name="face_regist">人脸注册</string>
    <string name="face_uvc_camera">UVCCamera示例</string>
    <string name="face_uvc_camera_double">双目UVCCamera示例</string>
    <string name="face_setting">参数设置</string>
    <string name="insert_cam">拍照录入</string>
    <string name="insert_vid">视频录入</string>
    <string name="insert_delete">全部删除</string>
    <string name="add_face">添加</string>
    <string name="insert_vid_tip">请观看示意图,并点击示意图，录制一段3秒的视频</string>
    <string name="insert_vid_start">开始</string>
    <string name="insert_pic">照片录入</string>

    <string name="map_44">eE3O8bi0Gt9yHW8MVEMxtQEfnejGqUgM</string>
    <string name="map_51">XU6Oy0CabHEge14HZ7mtQv1MGUF6jk9p</string>
    <string name="map_71">MGZ8lXIOWtZasVF3OAe355vK6LOw2NfX</string>

</resources>
