<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rela_bgg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_rect_white"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="以太网"
            android:textColor="@color/app_txt_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/ip_address"
                android:textColor="@color/app_txt_color"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/tv_ip_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/ip_address"
                android:textColor="@color/app_txt_color"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            style="@style/setting_current_view_style"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/subnet_mask"
                android:textColor="@color/app_txt_color"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/tv_subnet_mask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/subnet_mask"
                android:textColor="@color/app_txt_color"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            style="@style/setting_current_view_style"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/gateway"
                android:textColor="@color/app_txt_color"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/tv_gateway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/gateway"
                android:textColor="@color/app_txt_color"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            style="@style/setting_current_view_style"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/dns1"
                android:textColor="@color/app_txt_color"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/tv_dns1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/dns1"
                android:textColor="@color/app_txt_color"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            style="@style/setting_current_view_style"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/dns2"
                android:textColor="@color/app_txt_color"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/tv_dns2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/dns2"
                android:textColor="@color/app_txt_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_25"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_fouces_style"
                android:gravity="center"
                android:text="取消"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_modify"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:background="@drawable/btn_fouces_style"
                android:gravity="center"
                android:text="修改"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

