<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <TextView
                style="@style/internet_server_txt"
                android:text="@string/connection_status" />

            <TextView
                android:id="@+id/tv_status"
                style="@style/dev_time_txt_style" />
        </LinearLayout>

        <View
            style="@style/setting_current_view_style"
            android:layout_marginTop="10dp" />

        <!--服务器地址-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal">

            <TextView
                style="@style/internet_server_txt"
                android:text="@string/server_address" />

            <EditText
                android:id="@+id/tv_server_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/bt_save"
                android:singleLine="true"
                android:text="192.168.1.120"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            style="@style/setting_current_view_style"
            android:layout_marginTop="10dp" />


        <!--用户名字-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal">

            <TextView
                style="@style/internet_server_txt"
                android:text="用户名" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="服务器登录用户名"
                android:nextFocusDown="@+id/bt_save"
                android:singleLine="true"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            style="@style/setting_current_view_style"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal">

            <TextView
                style="@style/internet_server_txt"
                android:text="@string/control_port" />

            <TextView
                android:id="@+id/tv_control_port"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0"
                android:singleLine="true"
                android:textColor="@color/app_txt_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_modfy_port"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:background="@drawable/btn_fouces_style"
                android:gravity="center"
                android:text="修改"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            style="@style/setting_current_view_style"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal">

            <TextView
                style="@style/internet_server_txt"
                android:text="@string/download_link" />

            <TextView
                android:id="@+id/tv_download_link"
                style="@style/dev_time_txt_style"
                android:text="/sdcard/ys/client" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_save_line"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@drawable/btn_fouces_style"
            android:nextFocusDown="@id/tv_server_address"
            android:nextFocusUp="@id/tv_server_address"
            android:text="连接"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>